--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,11 @@ footer{
   .card{
     margin-bottom: 10px;
   }
+  .rightnav {
+    margin-right: 0px !important;
+    margin-top: 10px !important;
+  }
+  
 }
 
 .py-4 {
@@ -78,3 +83,4 @@ a:hover {
 .rightnav{
   margin-right: 30%;
 }
+
